Prevent typing effect from jumping page on mobile  (#161)
Because of typing effect in occupations long job titles were causing
issues on mobile. It could case page to jump scroll as this
content on top overflowed to multiple lines.

We fix this by making more space on mobile version so long titles
don't push other content on the page down.

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -74,6 +74,10 @@
         text-align: center;
     }
 
+    @include mobile {
+        min-height: 110px;
+    }
+
     &:hover {
         background: $dark-color;
         border-radius: 6px;
@@ -114,6 +118,10 @@
     &::after {
         content: '\2581';
         animation: blinkTextCursor 800ms steps(44) infinite normal;
+    }
+
+    @include mobile {
+        display: block;
     }
 }
 
